--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "google-fonts-webpack-plugin": "^0.4.4",
     "html-to-image": "^1.9.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "labelmake": "^2.0.21",
+    "rasterizehtml": "^1.3.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-mq": "^3.0.1",
