--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "labelmake": "^2.0.21",
+    "lodash": "^4.17.21",
     "rasterizehtml": "^1.3.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
