--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "labelmake": "^2.0.21",
     "lodash": "^4.17.21",
     "rasterizehtml": "^1.3.1",
+    "ua-parser-js": "^1.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-mq": "^3.0.1",
